# list-sync

./: .dockerignore  .env.core  .env.domain  .env.example  .env.plugnplay  .env.proddomain  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.arm64   Dockerfile.core  Dockerfile.domain  Dockerfile.proddomain  LICENCE  ReadMe.md  add.py  api_requirements.txt  api_server.py  config.yaml.example  docker-compose.arm64.yml  docker-compose.core.yml  docker-compose.domain.yml  docker-compose.local.yml  docker-compose.proddomain.yml  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  start-core.ps1  start-core.sh  start_api.py  stop-core.ps1  stop-core.sh  update.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  general_bug_report.yml  general_feature_request.yml  list_provider_request.md  list_provider_request.yml  sync_bug_report.md  sync_bug_report.yml  ui_bug_report.md  ui_bug_report.yml
.github/workflows/: build-multiarch.yml  docker-build.yml  python-ci.yaml
data/: config.enc  list_sync.db
development-files/: extracted_lists.txt
development-files/analysis/: analyze_database.py  analyze_listsync.py  examine_db.py  generate_sample_api_response.py  sample_api_response.json  sync_log_parser_prototype.py
docs/: README.md  advanced-usage.md  api-reference.md  api.md  architecture.md  configuration.md  contributing.md  how-it-works.md  installation.md  legal-disclaimer.md  legal-disclamer.md  roadmap.md  troubleshooting.md  user-guide.md
fossflow/: analytics-system.json  api-gateway-architecture.json  configuration-flow.json  container-architecture.json  homepage-architecture.json  initialization-flow.json  list-processing-pipeline.json  media-search-flow.json  provider-architecture.json  request-processing-flow.json  security-architecture.json  sync-operation-flow.json  system-architecture.json  troubleshooting-flow.json  web-interface-flow.json
list_sync/: __init__.py  __main__.py  cli.py  config.py  database.py  encryption.py  lists.py  main.py  overseerr.py  sync.py  utils.py
listsync-nuxt/: .env.example  .gitignore  .nvmrc  app.vue  error.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
listsync-web/: README.md  next.config.ts  package-lock.json  package.json  plan.txt
plugins/: imdb_chart.py  imdb_list.py  jellyfin_api.py  letterboxd.py  mdblist.py  trakt.py  tspdt.py
tests/: test_example.py
(+240 files in other folders)
