[project]
requires-python = ">= 3.9"

[tool.poetry]
name = "list-sync"
version = "0.4.4"
description = ""
authors = ["Woahai321"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
bs4 = "^0.0.2"
halo = "^0.0.31"
colorama = "^0.4.6"
cryptography = "^43.0.1"
python-dotenv = "^0.19.2"
seleniumbase

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
