[tool.poetry]
name = "list-sync"
version = "0.5.5"
description = "Sync your watchlists from IMDb, Trakt, and Letterboxd with Overseerr/Jellyseerr"
authors = ["Woahai321"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
halo = "^0.0.31"
colorama = "^0.4.6"
cryptography = "^42.0.2"
python-dotenv = "^1.0.1"
seleniumbase = "^4.22.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
