[tool.poetry]
name = "list-sync"
version = "0.5.8"
description = "Sync your watchlists from IMDb, Trakt, and Letterboxd with Overseerr/Jellyseerr"
authors = ["Soluify"]
readme = "ReadMe.md"
packages = [{include = "list_sync"}]

[tool.poetry.scripts]
list-sync = "list_sync.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = ">=2.28.0"
seleniumbase = ">=4.18.1"
cryptography = ">=41.0.0"
colorama = ">=0.4.6"
python-dotenv = ">=1.0.0"
discord-webhook = ">=1.3.0"
halo = ">=0.0.31"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "T201", "T203", "PLR0913", "PLR0915", "S603", "S607", "FBT002", "FBT001", "N802", "N803", "N806", "N815", "PLR2004", "SIM108", "SIM105", "PTH123", "ARG002", "PLR0912", "C901", "PLR0911", "PGH003"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
